--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,25 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Jordan Bowman
+email: desk@jrdnbwmn.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I'm a Senior UX Researcher and Experience Designer with 8+ years constructing digital experiences. I'm passionate about user-first and evidence-based design.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://jrdnbwmn.com" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: jrdnbwmn
+author:
+  twitter: uxtoolsco
+twitter:
+  username: uxtoolsco
+  card: summary_large_image
+logo: /img/jordan-bowman.jpg
+image: /img/jordan-bowman.jpg
+social:
+  name: Jordan Bowman
+  links:
+    - https://twitter.com/jrdnbwmn
+lang: en_US
 
 # Build settings
 markdown: kramdown
@@ -39,23 +48,27 @@ sass:
 # Plugins
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-typogrify
+  - jekyll-sitemap
 
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+# Other
+timezone: America/New_York
+
+# Exclude from processing
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
+  - README.md
+  - pre-jekyll
+
+# Keep these files safe
+keep_files:
+  - .git
+  - .svn
+  - .gitignore
+  - CNAME
