--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@
 
 title: Jordan Bowman
 email: desk@jrdnbwmn.com
+tagline: Senior UX Design & Researcher
 description: >- # this means to ignore newlines until "baseurl:"
   I'm a Senior UX Researcher and Experience Designer with 8+ years constructing digital experiences. I'm passionate about user-first and evidence-based design.
 baseurl: "" # the subpath of your site, e.g. /blog
