--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@
 
 title: Jordan Bowman
 email: desk@jrdnbwmn.com
-tagline: Senior UX Design & Researcher
+tagline: Senior UX Designer & Researcher
 description: >- # this means to ignore newlines until "baseurl:"
-  I'm a Senior UX Researcher and Experience Designer with 8+ years constructing digital experiences. I'm passionate about user-first and evidence-based design.
+  I'm a Senior UX Designer and Researcher with 8+ years constructing digital experiences. I'm passionate about user-first, evidence-based design.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://jrdnbwmn.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jrdnbwmn
@@ -30,9 +30,8 @@ author:
   twitter: uxtoolsco
 twitter:
   username: uxtoolsco
-  card: summary_large_image
-logo: /img/jordan-bowman.jpg
-image: /img/jordan-bowman.jpg
+logo: /img/share.jpg
+image: /img/share.jpg
 social:
   name: Jordan Bowman
   links:
