--- a/_config.yml
+++ b/_config.yml
@@ -27,9 +27,9 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://jrdnbwmn.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jrdnbwmn
 author:
-  twitter: uxtoolsco
+  twitter: jrdnbwmn
 twitter:
-  username: uxtoolsco
+  username: jrdnbwmn
 logo: /img/share.jpg
 image: /img/share.jpg
 social:
