--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Jordan Bowman
 email: desk@jrdnbwmn.com
 tagline: Senior UX Designer & Researcher
 description: >- # this means to ignore newlines until "baseurl:"
-  I'm a Senior UX Designer and Researcher with 8+ years constructing digital experiences. I'm passionate about user-first, evidence-based design.
+  I'm a Senior Product Designer and Researcher with 8+ years constructing digital experiences. I'm passionate about user-first, evidence-based design.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://jrdnbwmn.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jrdnbwmn
