--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-# Welcome to Jekyll!
-#
 # This config file is meant for settings that affect your whole blog, values
 # which you are expected to set up once and rarely edit after that. If you find
 # yourself editing this file very often, consider using Jekyll's data files
@@ -8,48 +6,176 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 #
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
 # These are used to personalize your new site. If you look in the HTML files,
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+# Change this to true when you're working on a future post
+future: false
+
+url: "" # the base hostname & protocol for your site, e.g. http://example.com, for jekyll-seo-tag
+
+# Meta data
+title: Jordan Bowman
+tagline: Practical UX skills and tools
+email: desk@jrdnbwmn.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+  Lessons and resources from two full-time product designers.
+twitter_username: jrdnbwmn
+author:
+  twitter: jrdnbwmn
+twitter:
+  username: jrdnbwmn
+  card: summary_large_image
+logo: /img/jordan-bowman.png
+image: /img/jordan-bowman.png
+social:
+  name: Jordan Bowman
+  links:
+    - https://twitter.com/jrdnbwmn
 
-# Build settings
-theme: minima
+timezone: America/New_York
+lang: en_US
+postcss:
+  cache: false
+
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+      type: "posts" # previously `post` in Jekyll 2.2.
+    values:
+      layout: "post"
+  -
+    scope:
+      path: ""
+    values:
+      image: /img/default-share.png
+url: 'https://www.jrdnbwmn.com' # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: ''
+
+# Posts path
+permalink: /post/:title/
+
+# Collections
+collections:
+  tools:
+    output: true
+    permalink: /stack/:title
+  bookmarks:
+    output: true
+    permalink: /bookmarks/:title
+
+markdown: kramdown
+
+# 1. Files excluded from Jekyll builds
+exclude:
+  - README.md
+  - LICENSE
+  - CNAME
+  - Gemfile
+  - Gemfile.lock
+  - .jekyll-cache
+  - .sass-cache/
+  - node_modules/
+  - package.json
+  - postcss.config.js
+  - tailwind.config.js
+  - yarn.lock
+
+# Keep these files safe
+keep_files:
+  - .git
+  - .svn
+  - .gitignore
+  - CNAME
+
+# 2. Plugins
 plugins:
+  - jekyll-postcss
   - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-paginate
+  - jekyll-archives
+  - jekyll-typogrify
+  - jekyll-sitemap # Keep at end
 
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+# Gem settings
+# paginate: 2 # jekyll-paginate > items per page
+# paginate_path: blog/page:num # jekyll-paginate > blog page
+# twitter:
+#   username: DavidDarnes # jekyll-seo-tag > Owners twitter username
+# author: DavidDarnes # jekyll-seo-tag > default author
+# social: # jekyll-seo-tag > social overrides
+#   name: David Darnes # jekyll-seo-tag > real name
+#   links:  # jekyll-seo-tag > social aliases (sameAs)
+#     - https://twitter.com/DavidDarnes
+#     - https://www.facebook.com/daviddarnes
+#     - https://www.linkedin.com/in/daviddarnes
+#     - https://github.com/daviddarnes
+
+# 4. Jekyll settings
+# sass:
+#   style: compressed # Style compression
+# permalink: pretty  # Permalink style (/YYYY/MM/DD/page-name/)
+# excerpt_separator: <!-- more --> # Marks end of excerpt in posts
+# timezone: Europe/London # Timezone for blog posts and alike
+
+# 5. Collections
+# collections:
+#   posts:
+#     title: Posts # Needed for Siteleaf
+#     output: true
+#     description: "My thoughts and ideas" # The post list page content
+#     feature_text: |
+#       Welcome to the blog
+#     feature_image: "https://picsum.photos/2560/600?image=866"
+# 6. Jekyll collections settings
+# defaults:
+#   -
+#     scope:
+#       path: ""
+#     values:
+#       image: "/assets/default-social-image.png" # Default image for sharing
+#   -
+#     scope:
+#       path: ""
+#       type: "posts"
+#     values:
+#       layout: post # Set the default layout for posts
+#   -
+#     scope:
+#       path: ""
+#       type: "pages"
+#     values:
+#       layout: page # Set the default layout for pages
+
+# 7. Site settings
+# encoding: utf-8 # Make sure the encoding is right
+# lang: en-GB # Set the site language
+# title: "Alembic" # Site name or title, also used in jekyll-seo-tag
+# logo: "/assets/logos/logo.svg" # Site logo, also used in jekyll-seo-tag
+# description: "Alembic is a starting point for Jekyll projects. Rather than starting from scratch, this boilerplate is designed to get the ball rolling immediately" # Site description and default description, also used in jekyll-seo-tag
+# url: "https://alembic.darn.es" # Site url, also used in jekyll-seo-tag
+# baseurl: ""
+# repo: "https://github.com/daviddarnes/alembic"
+# email: "me@daviddarnes.com"
+# disqus: "alembic-1" # Blog post comments, uncomment the option and set the site ID from your Disqus account
+# date_format: "%-d %B %Y" # Blog post date formatting using placeholder formatting
+# google_analytics: ""
+# google_analytics_anonymize_ip: ""
+# service_worker: false # Will turn off the service worker if set to false
+# short_name: "Al" # The web application short name, defaults to the site title
+# css_inline: true # Will insert all styles into a single <style> block in the <head> element and remove the style <link> reference
+
+# 8. Site favicons & manifest icons
+# favicons: # Favicons are also used in the manifest file. Syntax is 'size: path'
+#   16: '/assets/logos/logo@16px.png'
+#   32: '/assets/logos/logo@32px.png'
+#   96: '/assets/logos/logo@96px.png'
+#   120: '/assets/logos/logo@120px.png'
+#   144: '/assets/logos/logo@144px.png'
+#   180: '/assets/logos/logo@180px.png'
+#   512: '/assets/logos/logo@512px.png'
+#   1024: '/assets/logos/logo@1024px.png'
