--- a/.pages.yml
+++ b/.pages.yml
@@ -1,1 +1,25 @@
 media: assets/img
+content:
+  - name: tools
+    label: Tools
+    type: collection
+    path: '_tools'
+    view:
+      fields: [ published, title, tags, summary, link, image-html ]
+    fields:
+      - name: published
+        label: Published
+        type: boolean
+        default: true
+      - name: title
+        label: Title
+        type: string
+      - name: summary
+        label: Summary
+        type: string
+      - name: link
+        label: Link
+        type: string
+      - name: image-html
+        label: Image HTML
+        type: code
