--- a/.pages.yml
+++ b/.pages.yml
@@ -23,3 +23,26 @@ content:
       - name: image-html
         label: Image HTML
         type: code
+  - name: bookmarks
+    label: Bookmarks
+    type: collection
+    path: '_bookmarks'
+    view:
+      fields: [ published, title, link, date ]
+    fields:
+      - name: published
+        label: Published
+        type: boolean
+        default: true
+      - name: title
+        label: Title
+        type: string
+      - name: summary
+        label: Summary
+        type: string
+      - name: link
+        label: Link
+        type: string
+      - name: date
+        label: Date
+        type: date
