Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -29,6 +29,9 @@ content:
       - name: image-html
         label: Image HTML
         type: code
+      - name: body
+        label: Body
+        type: rich-text
   - name: bookmarks
     label: Bookmarks
     type: collection
@@ -58,3 +61,6 @@ content:
       - name: date
         label: Date
         type: date
+      - name: body
+        label: Body
+        type: rich-text
