--- a/.pages.yml
+++ b/.pages.yml
@@ -70,3 +70,36 @@ content:
       - name: body
         label: Body
         type: rich-text
+  - name: inspiration
+    label: Inspiration
+    type: collection
+    path: '_inspiration'
+    view:
+      fields: [ title, tags ]
+    fields:
+      - name: layout
+        label: Layout
+        type: select
+        required: true
+        options:
+          values: [ tool, stack ]
+      - name: tags
+        label: Tags
+        type: select
+        options:
+          values: [ design, development, productivity, media ]
+      - name: title
+        label: Title
+        type: string
+        required: true
+      - name: link
+        label: Link
+        type: string
+        required: true
+      - name: image
+        label: Image
+        type: image
+        required: true
+      - name: body
+        label: Body
+        type: rich-text
