Cleanup of nav and pages

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ defaults:
 collections:
   tools:
     output: true
-    permalink: /stack/:title
+    permalink: /tools/:title
   bookmarks:
     output: true
     permalink: /bookmarks/:title
