--- a/.pages.yml
+++ b/.pages.yml
@@ -15,7 +15,7 @@ content:
         label: Tags
         type: select
         options:
-          values: [ design, development, productivity, media ]
+          values: [ landing page, graphics, app ]
       - name: summary
         label: Summary
         type: string
